# hello-c-matrix

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  main.c
.github/workflows/: cmake.yml
cmake/: package.cmake.in
setup/: LICENSE.txt
